--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,5 +1,16 @@
-Wahooooo login boi
-<div id="login_buttons">
-    <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
-    <%= link_to "Login", login_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+<div class="container">
+    <form>
+      <div class="form-group">
+        <label for="email">Username:</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd">
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 </div>
