--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,6 +27,7 @@ body {
 
 #login_buttons {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .signup_button {
@@ -39,8 +40,11 @@ body {
   height: 550px;
 }
 
-.container {
-    width: 400px;
+.login-container {
+    width: 500px;
+    padding: 10px;
+    margin-top: 50px;
+    margin: auto;
     background-color: #7CD39D;
 }
 a {
@@ -49,4 +53,18 @@ a {
 a:hover {
     color: #299E55;
     text-decoration: none;
+}
+
+.btn {
+    background-color: #7CD39D;
+    border: 0 none;
+    border-radius: 24px;
+}
+
+.btn:hover {
+    background-color: #166831;
+}
+
+.btn:active:focus {
+    background-color: #166831;
 }
