--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,16 +1,28 @@
-<div class="container">
-    <form>
-      <div class="form-group">
-        <label for="email">Username:</label>
-        <input type="email" class="form-control" id="email">
+<div class="login-container">
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Username:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
       </div>
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd">
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Password:</label>
+      <div class="col-sm-10"> 
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
       </div>
-      <div class="checkbox">
-        <label><input type="checkbox"> Remember me</label>
+    </div>
+    <div class="form-group"> 
+      <div class="col-sm-offset-2 col-sm-10">
+        <div class="checkbox">
+          <label><input type="checkbox"> Remember me</label>
+        </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    </div>
+    <div class="form-group"> 
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
 </div>
