--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,3 +1,6 @@
+<div style="text-align:center">
+  <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
+</div>
 Wahooooo login boi
 <div id="login_buttons">
     <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
