--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<div style="text-align:center">
+  <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
+</div>
 <div class="center jumbotron">
 </div>
 <div id="login_buttons">
