Prints out current logged in user for proof

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
 </div>
 <div id="login_buttons">
-    
+    <h><%= @user.email %></h>
     <%= link_to "Sign up now", new_user_registration_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
     <%= link_to "Login", new_user_session_path, class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>
