--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,4 +4,5 @@
     <h><%= @user.email %></h>
     <%= link_to "Sign up now", new_user_registration_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
     <%= link_to "Login", new_user_session_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+    <%= link_to "Logout", new_user_session_path, class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>
