--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,78 @@
-<h2>Sign up</h2>
+<div style="text-align:center">
+  <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
+</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="signup-container">
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="firstname">First Name:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="firstname">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="lastname">Last Name:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="lastname">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="username">Username:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="username">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="email">Email:</label>
+      <div class="col-sm-6">
+        <input type="email" class="form-control" id="email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="password">Password:</label>
+      <div class="col-sm-6">
+        <input type="password" class="form-control" id="firstname">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="repassword">Re-enter Password:</label>
+      <div class="col-sm-6">
+        <input type="password" class="form-control" id="repassword">
+      </div>
+    </div>
+    
+    <div class="create_button">
+      <button type="submit" class="btn btn-default submit-btn">Create Account</button>
+    </div>
+  </form>
+</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<!--FUCK-->
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+<!--<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
+<!--  <%= devise_error_messages! %>-->
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+<!--  <div class="field">-->
+<!--    <%= f.label :email %><br />-->
+<!--    <%= f.email_field :email, autofocus: true %>-->
+<!--  </div>-->
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+<!--  <div class="field">-->
+<!--    <%= f.label :password %>-->
+<!--    <% if @minimum_password_length %>-->
+<!--    <em>(<%= @minimum_password_length %> characters minimum)</em>-->
+<!--    <% end %><br />-->
+<!--    <%= f.password_field :password, autocomplete: "off" %>-->
+<!--  </div>-->
 
-<%= render "devise/shared/links" %>
+<!--  <div class="field">-->
+<!--    <%= f.label :password_confirmation %><br />-->
+<!--    <%= f.password_field :password_confirmation, autocomplete: "off" %>-->
+<!--  </div>-->
+
+<!--  <div class="actions">-->
+<!--    <%= f.submit "Sign up" %>-->
+<!--  </div>-->
+<!--<% end %>-->
+
+<!--<%= render "devise/shared/links" %>-->
