Figure out how to reverse engineer

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,29 +2,60 @@
   <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
 </div>
 
+<!--<div class="signup-container">-->
+<!--  <form class="form-horizontal">-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="firstname">First Name:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="text" class="form-control" id="firstname">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="lastname">Last Name:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="text" class="form-control" id="lastname">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="username">Username:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="text" class="form-control" id="username">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="email">Email:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="email" class="form-control" id="email">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="password">Password:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="password" class="form-control" id="firstname">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="form-group">-->
+<!--      <label class="control-label col-sm-6" for="repassword">Re-enter Password:</label>-->
+<!--      <div class="col-sm-6">-->
+<!--        <input type="password" class="form-control" id="repassword">-->
+<!--      </div>-->
+<!--    </div>-->
+    
+<!--    <div class="create_button">-->
+<!--      <button type="submit" class="btn btn-default submit-btn">Create Account</button>-->
+<!--    </div>-->
+    
+<!--  </form>-->
+<!--</div>-->
+
 <div class="signup-container">
   <form class="form-horizontal">
-    
-    <div class="form-group">
-      <label class="control-label col-sm-6" for="firstname">First Name:</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control" id="firstname">
-      </div>
-    </div>
-    
-    <div class="form-group">
-      <label class="control-label col-sm-6" for="lastname">Last Name:</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control" id="lastname">
-      </div>
-    </div>
-    
-    <div class="form-group">
-      <label class="control-label col-sm-6" for="username">Username:</label>
-      <div class="col-sm-6">
-        <input type="text" class="form-control" id="username">
-      </div>
-    </div>
     
     <div class="form-group">
       <label class="control-label col-sm-6" for="email">Email:</label>
@@ -54,58 +85,6 @@
   </form>
 </div>
 
-<!-- TEST -->
-<!--<div class="signup-container">-->
-<!--  <form class="form-horizontal">-->
-
-<!--      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
-<!--        <%= devise_error_messages! %>-->
-      
-<!--        <div class="form-group">-->
-<!--          <label class="control-label col-sm-6" for="firstname">First Name:</label>-->
-<!--          <div class="col-sm-6">-->
-<!--            <input type="text" class="form-control" id="firstname">-->
-<!--            <%= f.label :email %><br />-->
-<!--            <%= f.email_field :email, autofocus: true %>-->
-<!--          </div>-->
-<!--        </div>-->
-        
-<!--        <div class="form-group">-->
-<!--          <label class="control-label col-sm-6" for="firstname">First Name:</label>-->
-<!--          <div class="col-sm-6">-->
-<!--            <input type="text" class="form-control" id="firstname">-->
-<!--            <%= f.label :password %><br />-->
-<!--            <% if @minimum_password_length %>-->
-<!--            <em>(<%= @minimum_password_length %> character minimum)</em>-->
-<!--            <% end %><br />-->
-<!--            <%= f.password_field :password, autocomplete: "off" %>-->
-<!--          </div>-->
-<!--        </div>-->
-        
-<!--        <div class="form-group">-->
-<!--          <label class="control-label col-sm-6" for="firstname">First Name:</label>-->
-<!--          <div class="col-sm-6">-->
-<!--            <input type="text" class="form-control" id="firstname">-->
-<!--            <%= f.label :password_confirmation %><br />-->
-<!--            <%= f.password_field :password_confirmation, autocomplete: "off" %>-->
-<!--          </div>-->
-<!--        </div>-->
-        
-<!--        <div class="create_button btn btn-default submit-btn">-->
-<!--            <%= f.submit "Sign up" %>  -->
-<!--        </div>-->
-        
-        <!--<div class="create_button">-->
-        <!--  <button type="submit" class="btn btn-default submit-btn">Create Account</button>-->
-        <!--</div>-->
-        
-<!--      <% end %>-->
-      
-<!--      <%= render "devise/shared/links" %>-->
-
-<!--    </div>-->
-<!--  </form>-->
-  
 <!-- ORIGINAL -->
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
