--- a/app/views/pages/signup.html.erb
+++ b/app/views/pages/signup.html.erb
@@ -1,5 +1,51 @@
-Yadda yadda signup page
-<div id="login_buttons">
-    <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
-    <%= link_to "Login", login_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+<div class="signup-container">
+  <form class="form-horizontal">
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="firstname">First Name:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="firstname">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="lastname">Last Name:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="lastname">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="username">Username:</label>
+      <div class="col-sm-6">
+        <input type="text" class="form-control" id="username">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="email">Email:</label>
+      <div class="col-sm-6">
+        <input type="email" class="form-control" id="email">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="password">Password:</label>
+      <div class="col-sm-6">
+        <input type="password" class="form-control" id="firstname">
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label class="control-label col-sm-6" for="repassword">Re-enter Password:</label>
+      <div class="col-sm-6">
+        <input type="password" class="form-control" id="repassword">
+      </div>
+    </div>
+    
+    <div class="create_button">
+      <button type="submit" class="btn btn-default submit-btn">Create Account</button>
+    </div>
+    
+  </form>
 </div>
