--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
 <div id="login_buttons">
     <% if user_signed_in? %>
         <h><%= @user.email %></h>
+        <!--<%= link_to "Newsfeed", TODO, %>-->
         <%= link_to "Logout", destroy_user_session_path, class: "btn btn-primary btn-lg btn-xlarge", :method => :delete %>
     <% else %>
         <%= link_to "Sign up now", new_user_registration_path, class: "btn btn-primary btn-lg btn-xlarge signup_button" %>
