--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,7 +69,7 @@ a:hover {
 }
 
 .btn {
-    background-color: #7CD39D;
+    background-color: #F4B350;
     border: 0 none;
     border-radius: 24px;
 }
