--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,17 +2,21 @@
   <h2>Forgot your password?</h2>
 </div>
   
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="signup-container">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %><br /><br />
-  </div>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= devise_error_messages! %>
+  
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true %><br /><br />
+    </div>
+  
+    <div class="actions">
+      <%= f.submit "Send me reset password instructions", :class=>'btn btn-default submit-btn' %><br /><br />
+    </div>
+  <% end %>
+  
+  <%= render "devise/shared/links" %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions", :class=>'btn btn-default submit-btn' %><br /><br />
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
