--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,7 @@
     <% if user_signed_in? %>
         <h><%= @user.email %></h>
 
+        <%= link_to "My SoundBytes", sound_bytes_path, class: "btn btn-primary btn-lg btn-xlarge", :method => :get %>
         <%= link_to "Upload SoundByte", new_sound_byte_path, class: "btn btn-primary btn-lg btn-xlarge", :method => :get %>
         
         <%= link_to "Logout", destroy_user_session_path, class: "btn btn-primary btn-lg btn-xlarge", :method => :delete %>
