--- a/app/views/sound_bytes/_sound_byte.html.erb
+++ b/app/views/sound_bytes/_sound_byte.html.erb
@@ -3,5 +3,12 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading"><%= sound_byte.mpeg_file_name %></h4>
+    
+      <audio controls>
+        <!--<source src="http://faulkner.lib.virginia.edu/static/audio/T106.mp3" type="audio/mpeg">-->
+        <source src="Time_of_Your_Life.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    
   </div>
 </div>
