feature: changed UI color for hovering

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,11 +75,11 @@ a:hover {
 }
 
 .btn:hover {
-    background-color: #166831;
+    background-color: #3BD89C;
 }
 
 .btn:active:focus {
-    background-color: #166831;
+    background-color: #3BD89C;
 }
 
 .submit-btn {
