--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -1,3 +1,10 @@
-<div class="page-header"><h1>Soundbytes</h1></div>
+<div class="modal-body row">
+  <div class="col-md-6">
+    <div class="page-header"><h1>Soundbytes</h1></div>
+    <%= render @sound_bytes %>
+  </div>
+  <div class="col-md-6">
+    <div class="page-header"><h1>Following:</h1></div>
 
-<%= render @sound_bytes %>
+  </div>
+</div>
