--- a/app/views/sound_bytes/_sound_byte.html.erb
+++ b/app/views/sound_bytes/_sound_byte.html.erb
@@ -3,6 +3,25 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading"><%= sound_byte.mpeg_file_name %>
+<!---->
+  <!--<form class="form-horizontal">-->
+
+  <!--  <div class="form-group">-->
+  <!--    <label class="control-label col-sm-2" for="pwd">Title:</label>-->
+  <!--    <div class="col-sm-10"> -->
+  <!--      <input type="sound_byte.mpeg_file_name" class="form-control" id="pwd" placeholder="Title">-->
+  <!--    </div>-->
+  <!--  </div>-->
+    
+  <!--  <div class="form-group"> -->
+  <!--    <div class="col-sm-offset-2 col-sm-10">-->
+  <!--      <button type="submit" class="btn btn-default">Submit</button>-->
+  <!--    </div>-->
+  <!--  </div>-->
+    <%= link_to "Edit", sound_byte_path(sound_byte.id), class: "btn btn-primary btn-lg btn-xlarge", :method => :put %>
+  <!--</form>-->
+<!---->
+      <%= link_to "Share", sound_byte_path(sound_byte), class: "btn btn-primary btn-lg btn-xlarge", :method => :get %>
       <%= link_to "Delete", sound_byte_path(sound_byte), class: "btn btn-primary btn-lg btn-xlarge", :method => :delete %>
     </h4>
     
