--- a/app/views/sound_bytes/_sound_byte.html.erb
+++ b/app/views/sound_bytes/_sound_byte.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "Share", sound_byte_path(sound_byte), class: "btn btn-primary btn-lg btn-xlarge", :method => :get %>
       <%= link_to "Delete", sound_byte_path(sound_byte), class: "btn btn-primary btn-lg btn-xlarge", :method => :delete %>
     
-      <h5 class="media-heading">Tag: <%= sound_byte.mpeg_file_name %></h5>
+      <h5 class="media-heading">Tag: <%= sound_byte.tag %></h5>
     
   </div>
 </div>
