--- a/app/views/sound_bytes/new.html.erb
+++ b/app/views/sound_bytes/new.html.erb
@@ -14,7 +14,7 @@
       
       <!-- Optional tag -->
       <label class="form-control" for="tag">Tag</label>
-      <input type="tag" class="form-control" id="tag" placeholder="Enter tag">
+      <!--<input type="tag" class="form-control" id="tag" placeholder="Enter tag">-->
         
     <% end %>
   </div>
