--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -1,13 +1,14 @@
 <div class="modal-body row">
+  
   <div class="col-md-6">
     <div class="page-header"><h1>Soundbytes</h1></div>
-    <%= render @sound_bytes %>
+    <!-- Renders the code in _sound_byte.html.erb -->
+    <%= render @my_sound_bytes %>
   </div>
+  
   <div class="col-md-6">
     <div class="page-header"><h1>Following:</h1></div>
-
     <!-- Renders the code in _sound_byte.html.erb -->
-    <%= render @sound_bytes %>
-    
+    <%= render @follower_sound_bytes %>
   </div>
 </div>
