--- a/app/views/sound_bytes/new.html.erb
+++ b/app/views/sound_bytes/new.html.erb
@@ -14,10 +14,9 @@
       
       <!-- Optional tag -->
       <label class="form-control" for="tag">Tag</label>
-      
       <!-- TODO: Fix this so it submits the tag! -->
-      <!--<input type="tag" class="form-control" id="tag" placeholder="Enter tag">-->
-
+      <input type="tag" class="form-control" id="tag" placeholder="Enter tag">
+      
     <% end %>
   </div>
 
