--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -3,8 +3,8 @@
   <div class="col-md-6">
     
     <!-- Buttons to change sorting options -->
-    <button class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
-    <button class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
+    <button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
+    <button onclick = "alert('Sort By Tag');" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
     
     <div class="page-header"><h1>Soundbytes</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
