Find a way to toggle between the two conditions

--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -3,12 +3,19 @@
   <div class="col-md-6">
     
     <!-- Buttons to change sorting options -->
-    <button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
+    <button onclick = "alert('Sort By Date');" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
+    <!--<button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>-->
     <button onclick = "alert('Sort By Tag');" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
     
     <div class="page-header"><h1>Soundbytes</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
-    <%= render @my_sound_bytes %>
+    
+    <% if 1 == 1 %>
+      <%= render @my_sound_bytes %>
+    <% else %>
+      <%= render @my_sound_bytes_ordered_by_tag %>
+    <% end %>
+  
   </div>
   
   <div class="col-md-6">
