Figure out sorting options later

--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -3,9 +3,9 @@
   <div class="col-md-6">
     
     <!-- Buttons to change sorting options -->
-    <button onclick = "alert('Sort By Date');" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
+    <button onclick = "sort_by_date_on(1);" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
     <!--<button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>-->
-    <button onclick = "alert('Sort By Tag');" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
+    <button onclick = "sort_by_date_on(0);" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
     
     <div class="page-header"><h1>Soundbytes</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
