--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -4,7 +4,7 @@
     
     <!-- Buttons to change sorting options -->
     <button onclick = "sort_by_date_on(1);" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
-    <!--<button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>-->
+    <button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
     <button onclick = "sort_by_date_on(0);" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
     
     <div class="page-header"><h1>Soundbytes</h1></div>
@@ -12,6 +12,8 @@
     
     <% if 1 == 1 %>
       <%= render @my_sound_bytes %>
+    <% elsif 0 == 0 %>
+      <%= render @my_sound_bytes_ordered_by_title %>
     <% else %>
       <%= render @my_sound_bytes_ordered_by_tag %>
     <% end %>
@@ -19,6 +21,12 @@
   </div>
   
   <div class="col-md-6">
+    
+    <!-- Buttons to change sorting options -->
+    <button onclick = "sort_by_date_on(1);" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
+    <button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
+    <button onclick = "sort_by_date_on(0);" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
+    
     <div class="page-header"><h1>Following:</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
     <%= render @follower_sound_bytes %>
