--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -3,20 +3,25 @@
   <div class="col-md-6">
     
     <!-- Buttons to change sorting options -->
-    <button onclick = "sort_by_date_on(1);" class="btn btn-primary btn-lg btn-xlarge">Sort by Date</button>
-    <button onclick = "alert('Sort By Title');" class="btn btn-primary btn-lg btn-xlarge">Sort by Title</button>
-    <button onclick = "sort_by_date_on(0);" class="btn btn-primary btn-lg btn-xlarge">Sort by Tag</button>
+    <%= link_to "Sort By Date", sound_bytes_path(:byte_order => 'date'), class: "btn btn-primary btn-lg btn-xlarge" %>
+    <%= link_to "Sort By Title", sound_bytes_path(:byte_order => 'title'), class: "btn btn-primary btn-lg btn-xlarge" %>
+    <%= link_to "Sort By Tag", sound_bytes_path(:byte_order => 'tag'), class: "btn btn-primary btn-lg btn-xlarge" %>
     
     <div class="page-header"><h1>Soundbytes</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
     
-    <% if 1 == 1 %>
+    <div id="my_bytes">
+    <% if @sort_by == 'date' %>
       <%= render @my_sound_bytes %>
-    <% elsif 0 == 0 %>
+    <% elsif @sort_by == 'title' %>
       <%= render @my_sound_bytes_ordered_by_title %>
-    <% else %>
+    <% elsif @sort_by == 'tag' %>
       <%= render @my_sound_bytes_ordered_by_tag %>
+    <% else %>
+      <%= render @my_sound_bytes %>
     <% end %>
+
+    </div>
   
   </div>
   
@@ -29,6 +34,6 @@
     
     <div class="page-header"><h1>Following:</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
-    <%= render @follower_sound_bytes %>
+  
   </div>
 </div>
