Uploaded by works now!

--- a/app/views/sound_bytes/_sound_byte.html.erb
+++ b/app/views/sound_bytes/_sound_byte.html.erb
@@ -20,7 +20,7 @@
       <br> 
       <h5 style="display: inline;" class="media-heading">Tag: <h4 style="display: inline;"><%= sound_byte.tag %></h4></h5>
       <br>
-      <h5 style="display: inline;" class="media-heading">Uploaded by: <h4 style="display: inline;"><%= current_user.email %></h4></h5>
+      <h5 style="display: inline;" class="media-heading">Uploaded by: <h4 style="display: inline;"><%= sound_byte.email %></h4></h5>
       <br>
       <h5 style="display: inline;" class="media-heading">Created at: <h4 style="display: inline;"><%= sound_byte.created_at %></h4></h5>
     
