--- a/app/views/sound_bytes/index.html.erb
+++ b/app/views/sound_bytes/index.html.erb
@@ -31,6 +31,7 @@
     <%= link_to "Sort By Date", sound_bytes_path(:public_order => 'date'), class: "btn btn-primary btn-lg btn-xlarge" %>
     <%= link_to "Sort By Title", sound_bytes_path(:public_order => 'title'), class: "btn btn-primary btn-lg btn-xlarge" %>
     <%= link_to "Sort By Tag", sound_bytes_path(:public_order => 'tag'), class: "btn btn-primary btn-lg btn-xlarge" %>
+    <%= link_to "Sort By Uploader", sound_bytes_path(:public_order => 'uploader'), class: "btn btn-primary btn-lg btn-xlarge" %>
     
     <div class="page-header"><h1>Public Soundbytes:</h1></div>
     <!-- Renders the code in _sound_byte.html.erb -->
@@ -41,6 +42,8 @@
         <%= render @public_sound_bytes_ordered_by_title %>
       <% elsif @public_sort_by == 'tag' %>
         <%= render @public_sound_bytes_ordered_by_tag %>
+      <% elsif @public_sort_by == 'uploader' %>
+        <%= render @public_sound_bytes_ordered_by_uploader %>
       <% else %>
         <%= render @public_sound_bytes %>
       <% end %>
