--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
-<div style="text-align:center">
-  <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
-</div>
-<div class="center jumbotron">
-</div>
+<% cache do %>
+    <div style="text-align:center">
+      <h3>Your Personal Audio Podcasts. <i>Anywhere</i></h3>
+    </div>
+
+    <div class="center jumbotron">
+    </div>
+<% end %>
 <div id="login_buttons">
     <% if user_signed_in? %>
     
