--- a/app/views/sound_bytes/_sound_byte.html.erb
+++ b/app/views/sound_bytes/_sound_byte.html.erb
@@ -2,8 +2,7 @@
   <div class="media-left">
   </div>
   <div class="media-body">
-    <h4 class="media-heading"><%= 
-    sound_byte.mpeg_file_name %></h4>
+    <h4 class="media-heading"><%= sound_byte.mpeg_file_name %></h4>
     
       <!-- Audio Player -->
       <audio controls>
